@@ -1,10 +1,10 @@
 package nzqr.jmh.benchmarks.arithmetic;
 
 /** <pre>
- * java -cp target\benchmarks.jar nzqr.jmh.benchmarks.arithmetic.Add
+ * java --enable-preview -cp target\benchmarks.jar nzqr.jmh.benchmarks.arithmetic.Add
  * </pre>
  * @author palisades dot lakes at gmail dot com
- * @version 2022-11-14
+ * @version 2024-01-01
  */
 
 public class Add extends Base {
