@@ -1,7 +1,7 @@
 package nzqr.jmh.benchmarks.arithmetic;
 
 /** <pre>
- * java -cp target\benchmarks.jar nzqr.jmh.benchmarks.arithmetic.Multiply
+ * java --enable-preview -cp target\benchmarks.jar nzqr.jmh.benchmarks.arithmetic.Multiply
  * </pre>
  * @author palisades dot lakes at gmail dot com
  * @version 2022-11-14
